# myscript

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
bisync/: bisync.py
dirlink_mirror/: README.md  dirlink_mirror.sh
docs/superpowers/plans/: 2026-04-24-utools-vue-frontend.md  2026-04-28-ui-improvements.md
docs/superpowers/specs/: 2026-04-24-utools-vue-frontend-design.md
jiratools/: jira_analyzer.py
sync2pod/: build.sh  requirements.txt  sync_local_to_pod.py  sync_local_to_pod_optimized.py  sync_local_to_pod_v2.py
utils/: concurrent.py  display.py  log.py  shell.py
utools/: index.html  make_logo.py  package-lock.json  package.json  plugin.json  preload.js
utools/src/: App.vue  router.js  style.css
utools/src/components/: ToolNav.vue
utools/src/components/bisync/: BisyncForm.vue  BisyncPanel.vue
utools/src/components/jiratools/: JiratoolsPanel.vue  OperationList.vue
utools/src/components/jiratools/operations/: DailyChart.vue  EpicQuery.vue  LabelTransfer.vue  SprintReport.vue  TicketTable.vue  WeeklyChart.vue  WorklogChart.vue  WorklogDashboard.vue
utools/src/components/settings/: SettingsPanel.vue
utools/src/components/shared/: InputWithHistory.vue  JobList.vue  LogViewer.vue  StatusBadge.vue
utools/src/components/sync2pod/: Sync2podForm.vue  Sync2podPanel.vue
utools/src/composables/: chartHelpers.js  useAutoRefresh.js  useJiraRun.js  useJobs.js  useTheme.js
